Don't invalidate width for children unless scrollbars have changed.

Previous to this patch, PaintLayerScrollableArea::updateAfterLayout
would call box().scrollbarsChanged(), even if relayout was delayed.
The result is that the box would sometimes force relayout its
children even when the box'es final state had the same logical width
as before.

With this patch, box().scrollbarsChanged() is only called when the
final state of scrollbars differs from the initial state.

BUG=621644
R=cbiesinger@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/2088323003
Cr-Commit-Position: refs/heads/master@{#401745}

Former-commit-id: 96c111dfbb085888c163c987375ff854b4619c5e